argocd/apps/media-server/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f sonarr.yaml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: sonarr
  name: sonarr
spec:
  ports:
    - name: "http"
      port: 8989
      targetPort: 8989
  selector:
    io.kompose.service: sonarr
