argocd/apps/media-server/sonarr/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr-vs
spec:
  hosts:
  - sonarr.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: sonarr
        port:
          number: 8989
